# ddsp-recode

./: .gitignore  README.md  central_training.py  config.yaml  convert_to_torchscript.py  ddsp.py  ddsp_config.yaml  debug.py  export.py  get_data.py  hparams.py  index.html  loader.py  preprocess.py  requirements.txt  runs  train.py  web_app.py
ddsp/: __init__.py  base_layers.py  complex_utils.py  core.py  model.py  synth.py  synth_bis.py  viz.py
realtime_patch/: CMakeLists.txt  ddsp_core.cpp  ddsp~.cpp  patch.pd
realtime_patch/ddsp_tilde/: CMakeLists.txt  ddsp_core.cpp  ddsp_core.hpp  ddsp_tilde.cpp
scripts/: example.py  export_all.sh  readme.md
torch_ddsp/: ddsp.py  hparams.py  loader.py
udls/: transforms.py
